--- a/spark-cluster/docker/base/Dockerfile
+++ b/spark-cluster/docker/base/Dockerfile
@@ -3,7 +3,7 @@ LABEL author="Daniel Ciocirlan" email="daniel@rockthejvm.com"
 LABEL version="0.2"
 
 ENV DAEMON_RUN=true
-ENV SPARK_VERSION=3.0.0-preview2
+ENV SPARK_VERSION=3.0.0
 ENV HADOOP_VERSION=2.7
 ENV SCALA_VERSION=2.12.4
 ENV SCALA_HOME=/usr/share/scala
